--- a/docs/style.css
+++ b/docs/style.css
@@ -1,51 +1,88 @@
-body, li, p, td {
-	font-family: Arial, sans-serif;
+a {
+	color: #00e;
 }
-
-pre, code, .literal {
-	font-family: Consolas, monospace;
+a:visited {
+	color: #551a8b;
 }
-
 html, body {
-
+	margin: 0;
+	padding: 0;
+	background-color: #f7f7f7;
+	color: #000;
 }
-
-.document {
+img {
+	border: 0;
 }
-
-p, li {
-	line-height: 150%;
+body {
+	max-width: 768px;
+	font-size: 11pt;
 }
-
+body, p {
+	font-family: Arial, Helvetica, sans-serif;
+	line-height: 125%;
+}
+code, pre {
+	font-family: 'Bitstream Vera Sans Mono', Consolas, 'Courier New', Courier, monospace;
+}
+div.document {
+	padding: 0.5em 1em 1em 1em;
+	border-left: 1em solid rgb(183, 176, 164);
+}
+#logo {
+	margin-bottom: 0em;
+}
+ol {
+	margin-top: 0.5em;
+}
+ol li, ul li {
+	margin-bottom: 0.5em;
+}
 h1 {
-	margin-top: 1.5em;
+	margin-top: 2em;
 	font-size: 1.25em;
 }
-
 h1.title {
 	margin-top: 0;
 }
-
 h2 {
-	font-size: 1.15em;
+	font-size: 1.1em;
+	margin-top: 2em;
 }
-
+h2.first {
+	margin-top: 0.75em;
+}
 h3 {
 	font-size: 1em;
 }
-
-h1, h1 *, h2 *, h3 * {
-	font-family: Arial, sans-serif;
+h3.first {
+	margin-top: 0.5em;
 }
-
 h1 a, h2 a, h3 a, h4 a, h5 a {
 	color: black;
 }
-
-
-li {
-	margin: 0.25em 0 0.25em 0;
+.button {
+	display: block;
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 14pt;
+	line-height: 23pt;
+	text-align: center;
+	float: left;
+	width: 160px;
+	height: 30px;
+	border: 1px solid #777;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	background-color: #e0dada;
+	margin-right: 16px;
 }
+.spacer {
+	padding: 0 0.15em 0 0.15em;
+	color: rgb(153, 156, 144);
+}
+
+
 
 /* for debugging
 ul, ol {
